Fix a diplay shift

--- a/assets/stylus/base.styl
+++ b/assets/stylus/base.styl
@@ -62,6 +62,8 @@ img
 
   &-content
     position absolute
+    @media screen and (max-width: 500px)
+      width 100%
     @media screen and (min-width: 500px)
       width 75%
 
